<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@android:style/TextAppearance.Large"
                    android:text="@string/level" />

                <TextView
                    android:id="@+id/textViewLv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="@android:style/TextAppearance.Large"
                    android:layout_weight="1"
                    android:text="@string/a" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@android:drawable/btn_star_big_on" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="@android:style/TextAppearance.Large"
                    android:text="@string/the_promised_game" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/the_promised_neverland_volume_4_review" />

            <Button
                android:id="@+id/buttonAtk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00BCD4"
                android:fontFamily="@font/architects_daughter"
                android:text="@string/atk"
                android:textColor="#910707" />

            <Button
                android:id="@+id/buttonEstats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F4DE1B"
                android:fontFamily="@font/architects_daughter"
                android:text="@string/stats"
                android:textColor="#0A36D6" />

            <Button
                android:id="@+id/buttonHitChance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#9C27B0"
                android:fontFamily="@font/architects_daughter"
                android:text="@string/hit_chance"
                android:textColor="#FF9800" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/your_hp"
                    android:textAppearance="@android:style/TextAppearance.Large" />

                <TextView
                    android:id="@+id/textViewhp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/b" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/your_atk"
                    android:textAppearance="@android:style/TextAppearance.Large" />

                <TextView
                    android:id="@+id/textViewAtk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="--" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/your_spd"
                    android:textAppearance="@android:style/TextAppearance.Large" />

                <TextView
                    android:id="@+id/textViewSpd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="--" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>